# lab-instruments

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml
src/lab_instruments/: __init__.py
src/lab_instruments/agilent/: __init__.py  hpE4418b.py
src/lab_instruments/hp/: __init__.py  hpE4418b.py
src/lab_instruments/keysight/: __init__.py  keysightP9375A.py
src/lab_instruments/ladybug/: __init__.py  ladybug5908l.py
src/lab_instruments/marconi/: __init__.py  marconi2041.py
src/lab_instruments/minicircuits/: __init__.py  minicircuits_usb_1sp8t_852h.py
src/lab_instruments/rigol/: __init__.py  rigol_dsg815.py
tests/keysight/: test_keysight_p9375a.py
