[project]
name = "lab-instruments"
version = "0.1.0"
description = "Private PyMeasure instrument drivers"
requires-python = ">=3.11"
dependencies = [
    "pymeasure",
]

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "device: requires physical test equipment",
]
