[project]
name = "lab-instruments"
version = "0.1.0"
description = "Private PyMeasure instrument drivers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pymeasure",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lab_instruments"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "device: requires physical test equipment",
]
